--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,18 +1,75 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <group android:id="@+id/actionbar_group_home">
+        <item
+            android:id="@+id/action_search"
+            android:icon="@drawable/ic_action_search"
+            android:title="@string/action_search"
+            app:actionViewClass="android.support.v7.widget.SearchView"
+            app:showAsAction="always|collapseActionView" />
 
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/action_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        <item
+            android:id="@+id/action_sync"
+            android:icon="@drawable/sync"
+            android:title="@string/sync"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_home_map"
+            android:icon="@drawable/map"
+            android:title="@string/map"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_home_group"
+            android:icon="@drawable/group"
+            android:title="@string/group"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_home_sort"
+            android:icon="@drawable/sort"
+            android:title="@string/sort"
+            app:showAsAction="always" />
 
-    <item
-        android:id="@+id/action_sync"
-        android:icon="@drawable/sync"
-        android:title="@string/sync"
-        app:showAsAction="ifRoom" />
+    </group>
+    <group android:id="@+id/actionbar_group_taskdetail">
+        <item
+            android:id="@+id/action_task_done"
+            android:icon="@drawable/done"
+            android:title="@string/done"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_task_notdone"
+            android:icon="@drawable/notdone"
+            android:title="@string/notDone"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_task_shopmap"
+            android:icon="@drawable/map"
+            android:title="@string/map"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_task_takephoto"
+            android:icon="@drawable/camera"
+            android:title="@string/takePhoto"
+            app:showAsAction="always" />
 
+    </group>
+    <group android:id="@+id/actionbar_group_tasklineitem_detail">
+        <item
+            android:id="@+id/action_tasklineitem_done"
+            android:icon="@drawable/done"
+            android:title="@string/done"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_tasklineitem_notdone"
+            android:icon="@drawable/notdone"
+            android:title="@string/notDone"
+            app:showAsAction="always" />
+        <item
+            android:id="@+id/action_tasklineitem_takephoto"
+            android:icon="@drawable/camera"
+            android:title="@string/takePhoto"
+            app:showAsAction="always" />
+
+    </group>
 </menu>
