--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,10 +4,32 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
-    <Switch
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="UPLOAD ON WIFI"
-        android:id="@+id/switch1"
-        android:layout_weight="0.05" />
+        android:rowCount="1"
+        android:columnCount="2"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/grid"
+        android:layout_weight="0.04">
+
+        <ToggleButton
+            android:layout_width="102dp"
+            android:layout_height="34dp"
+            android:text="New ToggleButton"
+            android:id="@+id/toggleButton"
+            android:layout_weight="0.05"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:checked="false" />
+        <TextView
+            android:text="UPLOAD ON WIFI ONLY"
+            android:id="@+id/text"
+            android:layout_weight="0.05"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_height="52dp"
+            android:layout_width="265dp" />
+    </GridLayout>
+
 </LinearLayout>
