--- a/app/src/main/res/layout/fragment_detail_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_detail_tasklineitem.xml
@@ -13,7 +13,7 @@
         android:paddingBottom="10dip"
         android:text="@string/shopName"
         android:textColor="#040404"
-        android:textSize="25sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:typeface="sans" />
     <!-- Address-->
@@ -27,7 +27,18 @@
         android:paddingTop="0dip"
         android:text="@string/shopAddress"
         android:textColor="#777777"
-        android:textSize="15sp" />
+        android:textSize="10sp"
+        android:textStyle="italic"
+        />
+    <TextView
+        android:id="@+id/space"
+        android:layout_width="400dp"
+        android:layout_height="10dp"
+        android:paddingTop="0dip"
+        android:background="#0033CC"
+        android:textColor="#777777"
+        android:textSize="10sp"
+        />
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview"
