--- a/app/src/main/res/layout/fragment_list_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_list_tasklineitem.xml
@@ -2,7 +2,7 @@
 <GridLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:rowCount="3"
+    android:rowCount="5"
     android:columnCount="1"
     android:layout_gravity="center_horizontal"
     android:id="@+id/grid"
@@ -20,14 +20,28 @@
         android:paddingBottom="10dip"
         android:text="@string/shopName"
         android:textColor="#040404"
-        android:textSize="25sp"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+    <TextView
+        android:id="@+id/Branch"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dip"
+        android:paddingBottom="10dip"
+        android:text="@string/shopName"
+        android:textColor="#040404"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:typeface="sans" />
     <!-- Address-->
     <TextView
         android:id="@+id/ShopAddress"
         android:layout_column="0"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvShopName"
@@ -36,13 +50,25 @@
         android:paddingTop="0dip"
         android:text="@string/shopAddress"
         android:textColor="#777777"
-        android:textSize="15sp" />
+        android:textStyle="italic"
+        android:textSize="10sp" />
+    <TextView
+        android:id="@+id/space"
+        android:layout_column="0"
+        android:layout_row="3"
+        android:layout_width="400dp"
+        android:layout_height="10dp"
+        android:paddingTop="0dip"
+        android:background="#0033CC"
+        android:textColor="#777777"
+        android:textSize="10sp"
+        />
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" tools:context="com.tt.fragments.TaskLineItemFragment"
+        android:layout_height="455dp" tools:context="com.tt.fragments.TaskLineItemFragment"
         android:layout_column="0"
-        android:layout_row="2">
+        android:layout_row="4">
 
         <ListView android:id="@android:id/list" android:layout_width="match_parent"
             android:layout_height="match_parent" />
