--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -7,6 +7,17 @@
 
 
     <!-- Rightend Arrow -->
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:text="status"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:typeface="sans"
+        android:textStyle="bold" />
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
