--- a/app/src/main/res/layout/fragment_detail_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_detail_tasklineitem.xml
@@ -13,7 +13,8 @@
         android:paddingBottom="10dip"
         android:text="@string/shopName"
         android:textColor="#040404"
-        android:textSize="15sp"
+        android:paddingLeft="8dip"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="sans" />
     <!-- Address-->
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvShopName"
         android:layout_below="@+id/tvShopName"
+        android:paddingLeft="8dip"
         android:layout_centerHorizontal="true"
         android:paddingTop="0dip"
         android:text="@string/shopAddress"
@@ -35,7 +37,6 @@
         android:layout_width="400dp"
         android:layout_height="10dp"
         android:paddingTop="0dip"
-        android:background="#0033CC"
         android:textColor="#777777"
         android:textSize="10sp"
         />
@@ -47,6 +48,7 @@
         android:columnWidth="90dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="10dp"
+        android:paddingLeft="8dip"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
