--- a/app/src/main/res/layout/fragment_list_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_list_tasklineitem.xml
@@ -15,12 +15,13 @@
         android:layout_row="0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dip"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dip"
         android:paddingBottom="10dip"
         android:text="@string/shopName"
         android:textColor="#040404"
-        android:textSize="15sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="sans" />
     <TextView
@@ -29,6 +30,7 @@
         android:layout_row="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dip"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dip"
         android:paddingBottom="10dip"
@@ -43,6 +45,7 @@
         android:layout_column="0"
         android:layout_row="2"
         android:layout_width="wrap_content"
+        android:paddingLeft="8dip"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvShopName"
         android:layout_below="@+id/tvShopName"
@@ -59,7 +62,6 @@
         android:layout_width="400dp"
         android:layout_height="10dp"
         android:paddingTop="0dip"
-        android:background="#0033CC"
         android:textColor="#777777"
         android:textSize="10sp"
         />
