--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -17,7 +17,9 @@
         android:textColor="#000000"
         android:textSize="12sp"
         android:typeface="sans"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_below="@+id/tvShopName"
+        android:layout_alignBottom="@+id/tvShopBranch" />
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
