--- a/app/src/main/res/layout/fragment_list_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_list_tasklineitem.xml
@@ -56,9 +56,24 @@
         android:textStyle="italic"
         android:textSize="10sp" />
     <TextView
-        android:id="@+id/space"
+        android:id="@+id/MinimumPhoto"
         android:layout_column="0"
         android:layout_row="3"
+        android:layout_width="wrap_content"
+        android:paddingLeft="12dip"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/ShopAddress"
+        android:layout_below="@+id/tvShopName"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="0dip"
+        android:text="@string/MinimumPhoto"
+        android:textColor="#777777"
+        android:textStyle="bold"
+        android:textSize="13sp" />
+    <TextView
+        android:id="@+id/space"
+        android:layout_column="0"
+        android:layout_row="4"
         android:layout_width="400dp"
         android:layout_height="10dp"
         android:paddingTop="0dip"
@@ -76,7 +91,7 @@
             android:layout_height="match_parent" />
 
         <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-            android:layout_height="match_parent" android:gravity="center" />
+            android:layout_height="422dp" android:gravity="center" />
 
     </FrameLayout>
 
