--- a/app/src/main/res/layout/fragment_list_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_list_tasklineitem.xml
@@ -18,49 +18,64 @@
         android:paddingLeft="8dip"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dip"
-        android:paddingBottom="10dip"
+        android:paddingBottom="0dip"
         android:text="@string/shopName"
         android:textColor="#040404"
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="sans" />
-    <TextView
-        android:id="@+id/Branch"
+
+    <RelativeLayout
+        android:id="@+id/relative"
         android:layout_column="0"
-        android:layout_row="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dip"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dip"
-        android:paddingBottom="10dip"
-        android:text="@string/shopName"
-        android:textColor="#040404"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:typeface="sans" />
+        android:layout_row="1">
+        <TextView
+            android:id="@+id/Branch"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dip"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="5dip"
+            android:paddingRight="50dip"
+            android:paddingBottom="2dip"
+            android:text="@string/shopName"
+            android:textColor="#040404"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:typeface="sans" />
+
+        <TextView
+            android:id="@+id/ShopAddress"
+            android:layout_width="wrap_content"
+            android:paddingLeft="13dip"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tvShopName"
+            android:layout_below="@+id/Branch"
+            android:paddingBottom="2dip"
+            android:text="@string/shopAddress"
+            android:textColor="#777777"
+            android:textStyle="bold"
+            android:textSize="10sp" />
+
+        <ImageView
+            android:id="@+id/ShopPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/Branch"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/shopphotoicon" />
+
+    </RelativeLayout>
+
     <!-- Address-->
-    <TextView
-        android:id="@+id/ShopAddress"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_width="wrap_content"
-        android:paddingLeft="12dip"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvShopName"
-        android:layout_below="@+id/tvShopName"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="0dip"
-        android:text="@string/shopAddress"
-        android:textColor="#777777"
-        android:textStyle="italic"
-        android:textSize="10sp" />
     <TextView
         android:id="@+id/MinimumPhoto"
         android:layout_column="0"
         android:layout_row="3"
         android:layout_width="wrap_content"
-        android:paddingLeft="12dip"
+        android:paddingLeft="13dip"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/ShopAddress"
         android:layout_below="@+id/tvShopName"
