--- a/app/src/main/res/menu/taskdetailmenu.xml
+++ b/app/src/main/res/menu/taskdetailmenu.xml
@@ -14,7 +14,7 @@
 
     <item
         android:id="@+id/mnuCheckin"
-        android:icon="@drawable/checkin"
+        android:icon="@drawable/map"
         android:showAsAction="always"
         android:title="Checkin"></item>
 
