--- a/app/src/main/res/layout/fragment_list_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_list_tasklineitem.xml
@@ -7,7 +7,8 @@
     android:layout_gravity="center_horizontal"
     android:id="@+id/grid"
     android:layout_weight="0.04"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#7EC0EE">
 
     <TextView
         android:id="@+id/ShopName"
@@ -53,7 +54,7 @@
             android:layout_below="@+id/Branch"
             android:paddingBottom="2dip"
             android:text="@string/shopAddress"
-            android:textColor="#777777"
+            android:textColor="#040404"
             android:textStyle="bold"
             android:textSize="10sp" />
 
@@ -67,7 +68,7 @@
             android:layout_centerHorizontal="true"
             android:paddingTop="0dip"
             android:text="@string/MinimumPhoto"
-            android:textColor="#777777"
+            android:textColor="#040404"
             android:textStyle="bold"
             android:textSize="13sp" />
 
@@ -100,7 +101,8 @@
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="455dp" tools:context="com.tt.fragments.TaskLineItemFragment"
         android:layout_column="0"
-        android:layout_row="4">
+        android:layout_row="4"
+        android:background="#ffffff">
 
         <ListView android:id="@android:id/list" android:layout_width="match_parent"
             android:layout_height="match_parent" />
