--- a/app/src/main/res/layout/fragment_detail_tasklineitem.xml
+++ b/app/src/main/res/layout/fragment_detail_tasklineitem.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#7EC0EE">
 
 
     <TextView
@@ -30,7 +31,7 @@
         android:layout_centerHorizontal="true"
         android:paddingTop="0dip"
         android:text="@string/shopAddress"
-        android:textColor="#777777"
+        android:textColor="#040404"
         android:textSize="10sp"
         android:textStyle="bold"
         />
@@ -62,11 +63,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:paddingLeft="8dip"
-        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:verticalSpacing="-7dp"
+        android:paddingLeft="2dip"
+        android:paddingRight="2dip"
+        android:horizontalSpacing="1dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
+        android:background="#ffffff"
         />
 </LinearLayout>
